--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,36 +12,36 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
     <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
-    <div class="card-header">Header</div>
+    <div class="card-header">EventEase</div>
     <div class="card-body">
-      <h5 class="card-title">Primary card title</h5>
+      <h5 class="card-title">ALL APPLICATIONS</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     </div>
   </div>
     </div>
     <div class="col">
-    <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
-    <div class="card-header">Header</div>
+    <div class="card text-bg-success mb-3" style="max-width: 18rem;">
+    <div class="card-header">EventEase</div>
     <div class="card-body">
-      <h5 class="card-title">Primary card title</h5>
+      <h5 class="card-title">ACCEPTED APPLICATIONS</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     </div>
   </div>
     </div>
     <div class="col">
-    <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
-    <div class="card-header">Header</div>
+    <div class="card text-bg-warning mb-3" style="max-width: 18rem;">
+    <div class="card-header">EventEase</div>
     <div class="card-body">
-      <h5 class="card-title">Primary card title</h5>
+      <h5 class="card-title">PENDING APPLICATIONS</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     </div>
   </div>
     </div>
     <div class="col">
-    <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
-    <div class="card-header">Header</div>
+    <div class="card text-bg-danger mb-3" style="max-width: 18rem;">
+    <div class="card-header">EventEase</div>
     <div class="card-body">
-      <h5 class="card-title">Primary card title</h5>
+      <h5 class="card-title">REJECTED APPLICATIONS</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     </div>
   </div>
