--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -45,7 +45,7 @@ body {
 <body>
 
 <div class="sidenav">
-  <a href="#">DASHBOARD</a>
+  <a href="{% url 'register' %}">DASHBOARD</a>
   <a href="#">APPLICATION STATUS</a>
   <a href="#">PAST APPLICATION</a>
   <a href="#">NEW APPLICATION</a>
