--- a/templates/main.html
+++ b/templates/main.html
@@ -12,13 +12,16 @@ body {
 }
 .section{
   margin-left: 310px; /* Same as the width of the sidenav */
-  margin-top: 10px;
   height: 80px;
   width: 1200px;
   background: blue;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-size: 20px;
+  padding: 10px;
+  text-decoration: none;
+  color: white;
 }
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
@@ -28,7 +31,9 @@ body {
 </head>
 <body>
   <div class="section">
-    <h1> welcome, name!</h1>
+    Welcome, {{request.user}}
+    <a href="{%url 'logout'%}"">LogOut</a>
+
   </div>
 <div class="main">
 
