--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -48,7 +48,7 @@ body {
   <a href="{% url 'register' %}">DASHBOARD</a>
   <a href="#">APPLICATION STATUS</a>
   <a href="#">PAST APPLICATION</a>
-  <a href="#">NEW APPLICATION</a>
+  <a href="{%url 'add_event'%}">NEW APPLICATION</a>
 </div>
 
 
