--- a/templates/add_event.html
+++ b/templates/add_event.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <title>Bootstrap Example</title>
+    <title>Add Events | EventsEase</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body class="p-3 m-0 border-0 bd-example m-0 border-0">
@@ -18,11 +18,28 @@
 
       <label for="date">Date:</label><br>
       <input type="date" id="date" name="date"><br>
+
       <label for="location">Location:</label><br>
       <input type="text" id="location" name="location"><br>
-      <label for="faculty">faculty:</label><br>
-      <input type="text" id="faculty" name="faculty"><br>
-      <label for="club">club:</label><br>
+
+      <label for="faculty">Faculty:</label>
+        <select name="faculty" id="faculty">
+            {% for faculty_member in faculty %}
+                <option value="{{ faculty_member.id }}">{{ faculty_member.name }}</option>
+            {% endfor %}
+        </select><br>
+
+      <label for="club">Club:</label><br>
       <input type="text" id="club" name="club"><br>
+
       <input type="submit" value="Submit">
+
+
+
+
+    days = models.CharField(max_length=2)
+    description = models.CharField(max_length=700)
+    cost = models.DecimalField(max_digits=5, decimal_places=2)
+    intake = models.IntegerField()
+    highlights 
   </form>
