--- a/templates/admin_dash.html
+++ b/templates/admin_dash.html
@@ -1,4 +1,4 @@
-{%extends 'main.html'%}
+{% comment %} {%extends 'main.html'%}
 {%block content%}
 <head>
   <meta charset="utf-8">
@@ -15,7 +15,7 @@
     <div class="card-header">EventEase</div>
     <div class="card-body">
       <h5 class="card-title">ALL APPLICATIONS</h5>
-      <p class="card-text">View your past applications. Applications here are waiting for approval.</p>
+      <p class="card-text">View your past approved applications</p>
     </div>
   </div>
     </div>
@@ -23,8 +23,8 @@
     <div class="card text-bg-success mb-3" style="max-width: 18rem;">
     <div class="card-header">EventEase</div>
     <div class="card-body">
-      <h5 class="card-title">ACCEPTED APPLICATIONS</h5>
-      <p class="card-text">View accepted applications. Make sure to adhere to dails provided.</p>
+      <h5 class="card-title">NEW APPLICATIONS</h5>
+      <p class="card-text">View recent applications for approval</p>
     </div>
   </div>
     </div>
@@ -33,7 +33,7 @@
     <div class="card-header">EventEase</div>
     <div class="card-body">
       <h5 class="card-title">PENDING APPLICATIONS</h5>
-      <p class="card-text">View applications sent for approval. Notification for the status update will be provided.</p>
+      <p class="card-text">View applications that require changes</p>
     </div>
   </div>
     </div>
@@ -48,4 +48,6 @@
     </div>
   </div>
 </body>
-{%endblock%}
+{%endblock%} {% endcomment %}
+
+you are not authorised to view this
