--- a/templates/show_events.html
+++ b/templates/show_events.html
@@ -1,14 +1,19 @@
+{%extends 'main.html'%}
+{%block content%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Event Details</title>
 </head>
 <body>
     <h1>Event Details</h1>
     <ul>
-        {% for event in events %}
+        {% comment %} {% for event in events %}
         <li>
             <h2>{{ event.title }}</h2>
             <p><strong>Date:</strong> {{ event.date }}</p>
@@ -16,7 +21,8 @@
             <p><strong>Description:</strong> {{ event.description }}</p>
             <!-- Add additional details as needed -->
         </li>
-        {% endfor %}
-    </ul>
+        {% endfor %} {% endcomment %}
+
 </body>
 </html>
+{%endblock%}
