--- a/templates/show_events.html
+++ b/templates/show_events.html
@@ -1,28 +1,50 @@
-{%extends 'main.html'%}
-{%block content%}
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <title>Add Events | EventsEase</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Event Details</title>
-</head>
-<body>
-    <h1>Event Details</h1>
-    <ul>
-        {% comment %} {% for event in events %}
-        <li>
-            <h2>{{ event.title }}</h2>
-            <p><strong>Date:</strong> {{ event.date }}</p>
-            <p><strong>Location:</strong> {{ event.location }}</p>
-            <p><strong>Description:</strong> {{ event.description }}</p>
-            <!-- Add additional details as needed -->
-        </li>
-        {% endfor %} {% endcomment %}
+  </head>
+  <body class="p-3 m-0 border-0 bd-example m-0 border-0">
+    <form method="post">
+      {% csrf_token %}
+      <label for="event_name">Name:</label><br>
+      <input type="text" id="event_name" name="event_name"><br>
 
-</body>
-</html>
-{%endblock%}
+      <label for="date">Date:</label><br>
+      <input type="date" id="date" name="date"><br>
+
+      <label for="club">Club:</label><br>
+      <input type="text" id="club" name="club"><br>
+
+      <label for="days">Days:</label><br>
+      <input type="integer" id="days" name="days"><br>
+
+      <label for="location">Location:</label><br>
+      <input type="text" id="location" name="location"><br>
+
+      <label for="faculty">Faculty:</label>
+        <select name="faculty" id="faculty">
+            {% for faculty_member in faculty %}
+                <option value="{{ faculty_member.name }}">{{ faculty_member.name }}</option>
+            {% endfor %}
+        </select><br>
+      
+      <label for="description">Description:</label><br>
+      <input type="text" id="description" name="description"><br>
+
+      <label for="cost">Cost:</label><br>
+      <input type="text" id="cost" name="cost"><br>
+      
+      <label for="intake">Intake:</label><br>
+      <input type="text" id="intake" name="intake"><br>
+      
+      <label for="highlight_event">Highlight Event:</label><br>
+      <input type="text" id="highlight_event" name="highlight_event"><br>
+
+      <input type="submit" value="Submit">
+
+  </form>
