--- a/templates/admin_dash.html
+++ b/templates/admin_dash.html
@@ -1,4 +1,4 @@
-{% comment %} {%extends 'main.html'%}
+{%extends 'main.html'%}
 {%block content%}
 <head>
   <meta charset="utf-8">
@@ -48,6 +48,4 @@
     </div>
   </div>
 </body>
-{%endblock%} {% endcomment %}
-
-you are not authorised to view this
+{%endblock%}
