--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,7 +24,7 @@
     <div class="card-header">EventEase</div>
     <div class="card-body">
       <h5 class="card-title">ACCEPTED APPLICATIONS</h5>
-      <p class="card-text">View accepted applications. Make sure to adhere to dails provided.</p>
+      <p class="card-text">View accepted applications. Make sure to adhere to details provided in the sumbitted form.</p>
     </div>
   </div>
     </div>
