--- a/templates/show_events.html
+++ b/templates/show_events.html
@@ -1,3 +1,5 @@
+{%extends 'main.html'%}
+{%block content%}
 <!doctype html>
 <html lang="en">
   <head>
@@ -9,42 +11,27 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body class="p-3 m-0 border-0 bd-example m-0 border-0">
-    <form method="post">
-      {% csrf_token %}
-      <label for="event_name">Name:</label><br>
-      <input type="text" id="event_name" name="event_name"><br>
+      {% if events %}
+      <ul>
+          {% for event in events %}
+              <li>
+                  <h2>{{ event.title }}</h2>
+                  <p>Description: {{ event.description }}</p>
+                  <p>Date: {{ event.date }}</p>
+                  <p>Club: {{ event.club }}</p>
+                  <p>Days: {{ event.days }}</p>
+                  <p>Faculty: {{ event.faculty }}</p>
+                  <p>Description: {{ event.description }}</p>
+                  <p>Cost: {{ event.cost }}</p>
+                  <p>Intake: {{ event.intake }}</p>
+                  <p>Highlight Event: {{ event.highlight_event }}</p>
+              </li>
+          {% endfor %}
+      </ul>
+  {% else %}
+      <p>No events available</p>
+  {% endif %}
 
-      <label for="date">Date:</label><br>
-      <input type="date" id="date" name="date"><br>
-
-      <label for="club">Club:</label><br>
-      <input type="text" id="club" name="club"><br>
-
-      <label for="days">Days:</label><br>
-      <input type="integer" id="days" name="days"><br>
-
-      <label for="location">Location:</label><br>
-      <input type="text" id="location" name="location"><br>
-
-      <label for="faculty">Faculty:</label>
-        <select name="faculty" id="faculty">
-            {% for faculty_member in faculty %}
-                <option value="{{ faculty_member.name }}">{{ faculty_member.name }}</option>
-            {% endfor %}
-        </select><br>
-      
-      <label for="description">Description:</label><br>
-      <input type="text" id="description" name="description"><br>
-
-      <label for="cost">Cost:</label><br>
-      <input type="text" id="cost" name="cost"><br>
-      
-      <label for="intake">Intake:</label><br>
-      <input type="text" id="intake" name="intake"><br>
-      
-      <label for="highlight_event">Highlight Event:</label><br>
-      <input type="text" id="highlight_event" name="highlight_event"><br>
-
-      <input type="submit" value="Submit">
 
   </form>
+  {%endblock%}
