--- a/templates/main.html
+++ b/templates/main.html
@@ -14,7 +14,7 @@ body {
   margin-left: 310px; /* Same as the width of the sidenav */
   height: 80px;
   width: 1200px;
-  background: blue;
+  background: #1C2541;
   display: flex;
   justify-content: space-between;
   align-items: center;
